created home screen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" id="tela" name="tela">
+
+            </iframe>
+        </section>
+
+        <section id="redes-sociais">
+            <ul>
+                <li><a href="#"><img src="images/logo-home.png" alt=""></a></li>
+                <li><a href="#"><img src="images/logo-github.png" alt=""></a></li>
+                <li><a href="#"><img src="images/logo-instagram.png" alt=""></a></li>
+                <li><a href="#"><img src="images/logo-twitter.png" alt=""></a></li>
+                <li><a href="#"><img src="images/logo-facebook.png" alt=""></a></li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
