--- a/screens/home.html
+++ b/screens/home.html
@@ -12,7 +12,7 @@
         body{
             height: 100vh;
             width: 100vw;
-            background: black url('images/tela-home.jpg') top center no-repeat fixed;
+            background: black url('../images/tela-home.jpg') top center no-repeat fixed;
             background-size: cover;
         }
     </style>
